tests/rosetta/out/Haskell/case-sensitivity-of-identifiers.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/case-sensitivity-of-identifiers.hs:40:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/case-sensitivity-of-identifiers.hs:35:1
                 /workspace/mochi/tests/rosetta/out/Haskell/case-sensitivity-of-identifiers.hs:40:1
   |
40 | main = do
   | ^^^^
